--- a/src/components/HeroHeader/heroHeader.css
+++ b/src/components/HeroHeader/heroHeader.css
@@ -13,47 +13,33 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    align-items: center;
     width:100%;
     margin:0 auto;
     padding:0;
     background: #171717;
 }
 
-.container-back-txt {
-    height:100%;
-    width:100%;
+.box-hero {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-}
-
-.background-hero {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    flex-direction: row;
+    justify-content: space-between;
     align-items: center;
-    padding: 0%;
-    margin: 0%;
-    position: relative;
-    height:100%;
     width:100%;
+    height:750px;
+    background: url('../../assets/images/backgroundHero.jpg') no-repeat center center;
+    background-size: cover;
 }
 
-.tof-back {
-    width:100%;
-    height:100%;
-    object-fit: cover ;
-}
 
 .container-txt {
-    position: absolute;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width:50%;
-    height:100%;
+    justify-content: flex-start;
+    align-items: flex-start;
+    width:40%;
+    padding: 5%;
+    height:90%;
 }
 
 .we-are {
@@ -70,14 +56,45 @@
     position: relative;
     top:0;
     text-transform: uppercase;
-    font-size: 50px;
-    line-height: 50px;
-    text-align: center;
+    font-size: 40px;
+    line-height: 40px;
+    text-align: left;
     color:white;
     font-weight: 900;
     font-family: 'Cinzel';
 }
+
+.container-screens {
+    width:40%;
+    padding: 5%;
+    height:90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.container-tof {
+    margin: 0 auto;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height:100%;
+    width:100%;
+}
+
+.asset-hero {
+    width:100%;
+    height:200px;
+    object-fit: contain;
+}
+
 @media screen and (max-width:1007px) {
+    .box-hero {
+        height:500px;
+    }
+    
     .we-are {
         font-size: 24px;
     }
@@ -85,15 +102,50 @@
     .title-hero {
         font-size: 30px;
     }
+
 }
 
+
 @media screen and (max-width:768px) {
-    .container-back-txt {
-        width:100%;
+    .box-hero {
+        height:auto;
         display: flex;
         flex-direction: column;
-        justify-content: center;
+    }
+
+    .box-hero {
+        height:400px;
+        background: url('../../assets/images/backgroundHero.jpg') no-repeat center center;
+        background-size: cover;
+    }
+
+    .background-hero {
+        height:600px;
+    }
+
+    .container-back-txt {
+        margin: 0%;
+        padding: 0%;
+        width:100%;
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: flex-start;
         align-items: center;
+    }
+
+    .container-txt {
+        left: 0;
+        padding: 0;
+        width:100%;
+        justify-content: flex-start;
+        align-items: center;
+    }
+
+    .container-screens {
+        width:100%;
+        margin: 0;
+        padding: 0;
+        right:0;
     }
 
     .we-are {
