--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -51,23 +51,18 @@
 }
 
 .nav_item1:hover {
-    /*border-bottom:2px solid white;*/
     box-shadow:  inset 2px 2px 5px #141414, inset -5px -5px 10px #212121;
 }
 .nav_item2:hover{
-    /*border-bottom:2px solid white;*/
     box-shadow:  inset 2px 2px 5px #141414, inset -5px -5px 10px #212121;
 }
 .nav_item3:hover{
-    /*border-bottom:2px solid white;*/
     box-shadow:  inset 2px 2px 5px #141414, inset -5px -5px 10px #212121;
 }
 .nav_item4:hover{
-    /*border-bottom:2px solid white;*/
     box-shadow:  inset 2px 2px 5px #141414, inset -5px -5px 10px #212121;
 }
 .nav_item5:hover{
-    /*border-bottom:2px solid white;*/
     box-shadow:  inset 2px 2px 5px #141414, inset -5px -5px 10px #212121;
 }
 
@@ -114,7 +109,7 @@
         padding-right: 0%;
         padding-left: 0%;
         width:100%;
-        margin-left: 10px;
+        margin-left: 5px;
         margin-right: 0px;
     }
 
@@ -132,5 +127,6 @@
     .nav_item_text2, .nav_item_text1, .nav_item_text3, .nav_item_text4, .nav_item_text5 {
         margin-left: 0;
         margin-right: 0;
+        font-size: 14px;
     }
 }
