--- a/src/components/HeroHeader/heroHeader.css
+++ b/src/components/HeroHeader/heroHeader.css
@@ -26,8 +26,8 @@
     justify-content: space-between;
     align-items: center;
     width:100%;
-    height:750px;
-    background: url('../../assets/images/backgroundHero.jpg') no-repeat center center;
+    /*height:750px;
+    background: url('../../assets/images/backgroundHero.jpg') no-repeat center center;*/
     background-size: cover;
 }
 
@@ -56,7 +56,7 @@
     position: relative;
     top:0;
     text-transform: uppercase;
-    font-size: 40px;
+    font-size: 32px;
     line-height: 40px;
     text-align: left;
     color:white;
@@ -90,17 +90,13 @@
     object-fit: contain;
 }
 
-@media screen and (max-width:1007px) {
-    .box-hero {
-        height:500px;
-    }
-    
+@media screen and (max-width:1007px) {  
     .we-are {
-        font-size: 24px;
+        font-size: 23px;
     }
     
     .title-hero {
-        font-size: 30px;
+        font-size: 24px;
     }
 
 }
@@ -113,29 +109,16 @@
         flex-direction: column;
     }
 
-    .box-hero {
-        height:400px;
+    /*.box-hero {
+        /*height:400px;
         background: url('../../assets/images/backgroundHero.jpg') no-repeat center center;
         background-size: cover;
-    }
+    }*/
 
-    .background-hero {
-        height:600px;
-    }
-
-    .container-back-txt {
-        margin: 0%;
-        padding: 0%;
-        width:100%;
-        display: flex;
-        flex-direction: column-reverse;
-        justify-content: flex-start;
-        align-items: center;
-    }
 
     .container-txt {
         left: 0;
-        padding: 0;
+        padding: 0px;
         width:100%;
         justify-content: flex-start;
         align-items: center;
@@ -153,6 +136,7 @@
     }
     
     .title-hero {
-        font-size: 25px;
+        padding: 20px;
+        font-size: 22px;
     }
 }
