--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -37,10 +37,12 @@
 
 .form-group input,
 .form-group textarea {
-    width: 100%;
-    padding: 10px;
+    width: 96%;
+    padding: 2%;
     border: 1px solid #ccc;
     border-radius: 4px;
+    box-shadow: 0 2px 10px rgba(255, 255, 255, 0.12);
+    font-family: 'Ysabeau SC', sans-serif;
 }
 
 .submit-button {
@@ -52,8 +54,22 @@
     border-radius: 4px;
     cursor: pointer;
     font-size: 16px;
+    box-shadow: 0 2px 10px rgba(255, 255, 255, 0.12);
 }
 
 .submit-button:hover {
     background-color: white;
+}
+
+@media (max-width: 768px) {
+    .contact-form{
+        width:90%;
+    }
+    .form-group input,
+    .form-group textarea {
+    width: 94%;
+    padding: 3%;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
 }
