--- a/src/components/Services/services.css
+++ b/src/components/Services/services.css
@@ -11,7 +11,7 @@
     margin: 0 auto 40px;
     max-width: 1800px;
     font-family: 'Ysabeau SC', sans-serif;
-    color: #fff;
+    color: aqua;
     font-size: 36px;
 }
 
