--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -1,132 +1,97 @@
-
 .container-navbar {
-    display:flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    align-items: flex-start;
-    width:50%;
-    padding-right: 8%;
-    padding-bottom: 30px;
-    padding-top: 1%;
-    margin-top: 0;
-}
-
-
-.nav-header {
-    margin-top: 0;
     display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    justify-content: center;
-    width:70%;
-
+    justify-content: flex-end;
+    align-items: center;
+    width: 84%;
+    padding: 20px 8%;
+    background-color: rgba(47, 47, 47, 0.821);
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5); 
 }
 
-.nav_item1, .nav_item2, .nav_item3, .nav_item4, .nav_item5 {
-    position:relative;
+
+.container-navbar .nav-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 50%;
+    max-width: 1200px;
+}
+
+
+.container-navbar .nav-header .nav-item {
+    position: relative;
+    padding: 0 20px;
     text-decoration: none;
-    padding-right:15px;
-    padding-left:15px;
+    transition: color 0.3s ease-in-out; 
 }
 
-.nav_item3 {
-    width:38%;
-}
-
-.nav_item2 {
-    width:38%;
-}
-
-.nav_item4 {
-    width:38%;
-}
-
-.nav_item5 {
-    width:38%;
-}
-
-.nav_item1 {
-    position:relative;
-    width:38%;
-}
-
-.nav_item1:hover {
-    box-shadow:  inset 2px 2px 5px #141414, inset -5px -5px 10px #212121;
-}
-.nav_item2:hover{
-    box-shadow:  inset 2px 2px 5px #141414, inset -5px -5px 10px #212121;
-}
-.nav_item3:hover{
-    box-shadow:  inset 2px 2px 5px #141414, inset -5px -5px 10px #212121;
-}
-.nav_item4:hover{
-    box-shadow:  inset 2px 2px 5px #141414, inset -5px -5px 10px #212121;
-}
-.nav_item5:hover{
-    box-shadow:  inset 2px 2px 5px #141414, inset -5px -5px 10px #212121;
-}
-
-.nav_item_text2, .nav_item_text1, .nav_item_text3, .nav_item_text4, .nav_item_text5 {
+.container-navbar .nav-header .nav-item .nav-item-text {
     font-family: 'Ysabeau SC', sans-serif;
-    color:white;
-    font-size: 20px;
+    color: #ffffff; 
+    font-size: 18px;
     font-weight: 600;
-    width:100%;
     text-align: center;
+    transition: transform 0.3s ease, color 0.3s ease; 
 }
 
-@media screen and (max-width:1007px) {
+.container-navbar .nav-header .nav-item::after {
+    content: '';
+    position: absolute;
+    left: 50%;
+    bottom: -5px;
+    width: 0;
+    height: 2px;
+    background-color: aqua; 
+    transition: width 0.3s ease, left 0.3s ease; 
+}
+
+.container-navbar .nav-header .nav-item:hover .nav-item-text {
+    color: aqua;
+    transform: translateY(-2px); 
+}
+
+.container-navbar .nav-header .nav-item:hover::after {
+    width: 100%;
+    left: 0;
+}
+
+@media screen and (max-width: 1007px) {
     .container-navbar {
         justify-content: center;
-        padding-right: 0%;
-        padding-left: 0%;
-        width:100%;
-        margin-left: 30px;
-        margin-right: 0px;
+        width: 90%;
+        padding: 15px 5%;
     }
 
-    .nav-header {
-        justify-content: space-between;
-        width: 96%;
-        margin-left: 0;
-        margin-right: 0;
+    .container-navbar .nav-header {
+        width: 80%;
     }
 
-    .nav_item1, .nav_item2, .nav_item3, .nav_item4, .nav_item5 {
-        padding-right: 0%;
-        padding-left: 0%;
+    .container-navbar .nav-header .nav-item {
+        padding: 0 15px;
     }
 
-    .nav_item_text2, .nav_item_text1, .nav_item_text3, .nav_item_text4, .nav_item_text5 {
-        margin-left: 0;
-        margin-right: 0;
+    .container-navbar .nav-header .nav-item .nav-item-text {
+        font-size: 16px;
     }
 }
 
-@media screen and (max-width:768px) {
-    .container-navbar {
-        justify-content: center;
-        padding-right: 0%;
-        padding-left: 0%;
-        width:100%;
-        margin-left: 5px;
-        margin-right: 0px;
+
+@media screen and (max-width: 768px) {
+    .container-navbar .nav-header {
+        width: 100%;
     }
 
-    .nav-header {
-        justify-content: space-between;
-        width: 96%;
-        margin-right: 0;
+    .container-navbar .nav-header .nav-item {
+        padding: 0 10px;
     }
 
-    .nav_item1, .nav_item2, .nav_item3, .nav_item4, .nav_item5 {
-        padding-right: 0%;
-        padding-left: 0%;
-    }
-
-    .nav_item_text2, .nav_item_text1, .nav_item_text3, .nav_item_text4, .nav_item_text5 {
-        margin-left: 0;
-        margin-right: 0;
-        font-size: 14px;
+    .container-navbar .nav-header .nav-item .nav-item-text {
+        font-size: 14px; 
     }
 }
+
+
