--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -4,20 +4,13 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    min-height: 800px;
-
-    border-top: 1px solid rgba(255, 255, 255, 0.1);
-    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+    border-bottom: 1px solid black;
     position: relative;
-    background: linear-gradient(135deg, rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.7)), url('../../assets/images/backgroundAbout.jpg') no-repeat center/cover;
+    background: linear-gradient(135deg, rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.7));
     color: #ffffff;
     overflow: hidden;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5); 
 }
-
-.back-about {
-    display: none;
-}
-
 .content-about {
     margin: 0 auto;
     display: flex;
@@ -25,7 +18,8 @@
     justify-content: center;
     align-items: center;
     width: 88%;
-    padding: 6%;
+    padding-left: 6%;
+    padding-right: 6%;
     z-index: 1;
     text-align: center;
     background: rgba(0, 0, 0, 0.6);
@@ -41,7 +35,8 @@
 }
 
 .subtitle-about {
-    font-size: 28px;
+    margin-top:120px;
+    font-size: 36px;
     font-family: 'Ysabeau SC', sans-serif;
     margin-bottom: 10px;
     /*color: #FF6F61; */
@@ -69,7 +64,6 @@
     text-align: left;
     box-sizing: border-box;
     margin: 0;
-    /*border-left: 3px solid #FF6F61;*/
     border-left: 3px solid aqua;
     padding-left: 20px;
     animation: fadeInUp 1.4s ease-in-out;
@@ -129,7 +123,6 @@
 .specification {
     font-size: 24px;
     margin-bottom: 10px;
-    /*color: #FF6F61;*/
     color:aqua;
     font-family: 'Ysabeau SC', sans-serif;
 }
@@ -141,14 +134,16 @@
     font-family: 'Ysabeau SC', sans-serif;
 }
 
-/* Icon Styling for Specifications */
 .specification i {
     margin-right: 10px;
     font-size: 26px;
 }
 
-/* Media Queries for Mobile */
 @media (max-width: 768px) {
+    .content-about {
+        padding-bottom: 110px;
+    }
+
     .box-about {
         flex-direction: column;
         align-items: center;
