--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -4,14 +4,17 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border-top:1px solid black;
     width:90%;
     min-height: 350px;
-    background:#333335;
+    background:#202020;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5); 
+    border-bottom:1px solid black;
 }
 .title-contact {
     font-family: 'Ysabeau SC', sans-serif;
     color:aqua;
+    font-size: 36px;
+    margin-top: 40px;
 }
 
 .contact-form {
@@ -62,14 +65,20 @@
 }
 
 @media (max-width: 768px) {
+    .title-contact {
+        margin-top: 100px;
+    }
+
     .contact-form{
         width:90%;
+        margin-bottom: 100px;
     }
+
     .form-group input,
     .form-group textarea {
-    width: 94%;
-    padding: 3%;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-}
+        width: 94%;
+        padding: 3%;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+    }
 }
