--- a/src/components/DetailsPack/detailspack.css
+++ b/src/components/DetailsPack/detailspack.css
@@ -3,7 +3,7 @@
     overflow: hidden;
     transition: max-height 0.3s ease;
     padding: 0 20px;
-    background-color: aqua;
+    background-color: rgba(0, 255, 255, 0.996);
     margin-top: 10px;
     color:black;
 }
