--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -135,6 +135,7 @@
     }
 
     .container-containers {
+        margin-top: 120px;
         width:50%;
         display: flex;
         flex-direction: column;
@@ -190,6 +191,7 @@
     }
 
     .container-containers {
+        margin-top: 120px;
         width:50%;
         display: flex;
         flex-direction: column;
