--- a/src/components/HeroHeader/heroHeader.css
+++ b/src/components/HeroHeader/heroHeader.css
@@ -24,6 +24,8 @@
     overflow: hidden;
     position: relative;
     padding-bottom: 50px;
+    border-bottom: 1px solid black;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5); 
 }
 
 .box-hero {
@@ -84,8 +86,8 @@
 }
 
 .asset-hero {
-    width: 90%;
-    height: auto;
+    width: 500px;
+    height: 375px;
     border-radius: 8px;
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
 }
@@ -97,18 +99,24 @@
     left: -50%;
     width: 200%;
     height: 200%;
-    background: radial-gradient(circle, rgba(255,255,255,0.05), transparent 70%);
+    background: linear-gradient(circle, rgba(255,255,255,0.05), transparent 70%);
     z-index: 1;
     animation: rotateBg 20s linear infinite;
 }
 
-@media screen and (max-width: 1007px) {  
+@media screen and (max-width: 1037px) {  
     .we-are {
         font-size: 28px;
     }
     
     .title-hero {
         font-size: 34px;
+    }
+
+    .asset-hero {
+        width:320px;
+        height:auto;
+        padding: 2%;
     }
 }
 
@@ -124,7 +132,6 @@
     }
 
     .container-screens {
-        width: 100%;
         margin-top: 30px;
     }
 
@@ -134,6 +141,11 @@
     
     .title-hero {
         font-size: 28px;
+    }
+    .asset-hero {
+        width:320px;
+        height:auto;
+        padding: 2%;
     }
 }
 
