--- a/src/components/Promo/promo.css
+++ b/src/components/Promo/promo.css
@@ -1,9 +1,10 @@
 .container-promo {
     width: 100%;
-    background:rgba(0, 0, 0, 0.915);
-    box-shadow: 0 4px 8px rgba(128, 128, 128, 0.2);
+    background:linear-gradient(135deg, #0d0d0d, #292929);
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5); 
     text-align: center;
     box-sizing: border-box;
+    border-bottom: 1px solid black;
 }
 
 .container-promo h2 {
@@ -13,17 +14,17 @@
     margin-bottom: 20px;
     /* Animation */
     animation: fadeInScale 2.5s ease infinite;
-    opacity: 0; /* Start with hidden text */
+    opacity: 0; 
 }
-/* Keyframes for the animation */
+
 @keyframes fadeInScale {
     0% {
         opacity: 0;
-        transform: scale(0.5); /* Start slightly smaller */
+        transform: scale(0.5); 
     }
     100% {
         opacity: 1;
-        transform: scale(1); /* End at normal size */
+        transform: scale(1); 
     }
 }
 
@@ -54,7 +55,7 @@
     border-radius: 8px;
     padding: 20px;
     width: 250px;
-    box-shadow: 0 4px 8px rgba(128, 128, 128, 0.2);
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5); 
     transition: transform 0.3s ease;
 }
 
