--- a/src/components/Services/services.css
+++ b/src/components/Services/services.css
@@ -1,14 +1,15 @@
 .container-services {
     width: 100%;
-    min-height: 800px;
     background: #202020;
-    padding: 50px 20px;
+    padding: 50px 20px 80px;
     box-sizing: border-box;
     text-align: center;
+    border-bottom: 1px solid black;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5); 
 }
 
 .services-title {
-    margin: 0 auto 40px;
+    margin: 60px auto 40px;
     max-width: 1800px;
     font-family: 'Ysabeau SC', sans-serif;
     color: aqua;
@@ -29,8 +30,8 @@
     border-radius: 8px;
     padding: 20px;
     width: 300px;
-    box-shadow: 0 4px 8px rgba(128, 128, 128, 0.2);
     transition: transform 0.3s ease;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5); 
 }
 
 .service-card:hover {
@@ -65,7 +66,7 @@
     text-align: left;
 }
 
-.price {
+.price, .time {
     font-family: 'Ysabeau SC', sans-serif;
     color: #fff;
     font-size: 24px;
@@ -90,6 +91,9 @@
 }
 
 @media (max-width: 900px) {
+    .container-services {
+        padding: 50px 20px 110px;
+    }
     .services-grid {
         flex-direction: column;
         align-items: center;
@@ -100,3 +104,4 @@
         margin-bottom: 20px;
     }
 }
+
