--- a/src/components/Terms/terms.css
+++ b/src/components/Terms/terms.css
@@ -9,8 +9,8 @@
     margin: 20px 0;
     margin-left: auto;
     margin-right: auto;
-    border:1px solid white;
-    box-shadow: 0 4px 8px rgba(255, 255, 255, 0.293);
+    border:1px solid black;
+    box-shadow: 0 2px 20px rgba(0, 0, 0, 0.5); 
 }
 
 .legal-notice-section h2, .privacy-policy-section h2, .terms-of-service-section h2 {
@@ -41,7 +41,7 @@
 
 @media screen and (max-width:768px) {
     .legal-notice-section, .privacy-policy-section, .terms-of-service-section {
-        width:94%;
-        padding: 0;
+        width:88%;
+        padding: 3%;
     }
 }
