centrage de text version mobile

--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -124,7 +124,7 @@
     .txt-footer, .container-social {
         width: 100%;
         align-items: center;
-        text-align: left;
+        text-align: center;
     }
 
     .legal-notice {
