--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -117,7 +117,10 @@
     background: rgba(255, 255, 255, 0.1);
     border-radius: 8px;
     padding: 20px;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 3px 4px rgb(0, 0, 0, 1), inset 0 -2px 5px rgba(0, 0, 0, 1),
+    inset 0 4px 15px rgba(255, 255, 255, 0.245), 0 0 0 2px #33333330, 0 0 0 5px #33333330,
+    0 0 0 5.5px #33333330;
+    padding:15px;
 }
 
 .specification {
