--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -17,6 +17,16 @@
     margin-top: 40px;
 }
 
+.subtitle-contact {
+    width:50%;
+    font-family: 'Ysabeau SC', sans-serif;
+    color: #ccc;
+    font-size: 22px;
+    margin-top: 10px;
+    margin-bottom: 40px;
+    text-align: center;
+}
+
 .contact-form {
     margin: 0 auto;
     width: 50%;
@@ -34,7 +44,7 @@
 }
 
 .form-group label {
-    margin-bottom: 5px;
+    padding-bottom: 5px;
     font-weight: bold;
 }
 
@@ -42,13 +52,15 @@
 .form-group textarea {
     width: 96%;
     padding: 2%;
-    border: 1px solid #ccc;
     border-radius: 4px;
-    box-shadow: 0 2px 10px rgba(255, 255, 255, 0.12);
     font-family: 'Ysabeau SC', sans-serif;
+    box-shadow: 0 3px 4px rgb(0, 0, 0, 1), inset 0 -2px 5px rgba(100, 100, 100, 0.863),
+    inset 0 4px 15px rgba(255, 255, 255, 0.842), 0 0 0 2px #252525, 0 0 0 5px #262626,
+    0 0 0 1.5px #262626;
 }
 
 .submit-button {
+    transition: background-color 0.3s ease;
     padding: 10px 20px;
     background-color: aqua;
     color: black;
@@ -57,7 +69,10 @@
     border-radius: 4px;
     cursor: pointer;
     font-size: 16px;
-    box-shadow: 0 2px 10px rgba(255, 255, 255, 0.12);
+    box-shadow: 0 3px 4px #292828, inset 0 -2px 5px #292929,
+    inset 0 4px 5px rgba(255, 255, 255, 0.245), 0 0 0 2px #2a2a2a, 0 0 0 5px #252525,
+    0 0 0 1.5px #343434;
+
 }
 
 .submit-button:hover {
@@ -67,6 +82,16 @@
 @media (max-width: 768px) {
     .title-contact {
         margin-top: 100px;
+    }
+
+    .subtitle-contact {
+        width:90%;
+        font-family: 'Ysabeau SC', sans-serif;
+        color: #ccc;
+        font-size: 22px;
+        margin-top: 10px;
+        margin-bottom: 40px;
+        text-align: center;
     }
 
     .contact-form{
