--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -56,7 +56,9 @@
     font-size: 24px; 
     color: white;
     transition: all 0.3s ease-in-out; 
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2); 
+    box-shadow: 0 3px 4px rgb(0, 0, 0, 1), inset 0 -2px 5px rgba(100, 100, 100, 0.863),
+    inset 0 4px 15px rgba(255, 255, 255, 0.842), 0 0 0 2px #252525, 0 0 0 5px #262626,
+    0 0 0 1.5px #262626;
 }
 
 /* Couleur des icônes */
