--- a/src/components/Promo/promo.css
+++ b/src/components/Promo/promo.css
@@ -53,9 +53,11 @@
 .promo-pack {
     background: #111111;
     border-radius: 8px;
-    padding: 20px;
     width: 250px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5); 
+    box-shadow: 0 3px 4px rgb(0, 0, 0, 1), inset 0 -2px 5px rgba(0, 0, 0, 1),
+    inset 0 4px 15px rgba(255, 255, 255, 0.245), 0 0 0 2px #000, 0 0 0 5px #000000,
+    0 0 0 5.5px #080808;
+    padding:15px;
     transition: transform 0.3s ease;
 }
 
