--- a/src/components/Policy/policy.css
+++ b/src/components/Policy/policy.css
@@ -6,11 +6,11 @@
     width:98%;
     padding: 20px;
     border-radius: 8px;
-    margin: 20px 0;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 20px auto;
     border:1px solid black;
-    box-shadow: 0 2px 20px rgba(0, 0, 0, 0.5); 
+    box-shadow: 0 3px 4px rgb(0, 0, 0, 1), inset 0 -2px 5px rgba(0, 0, 0, 1),
+    inset 0 4px 15px rgba(255, 255, 255, 0.245), 0 0 0 2px #000, 0 0 0 5px #000000,
+    0 0 0 5.5px #080808;
 }
 
 .legal-notice-section h2, .privacy-policy-section h2, .terms-of-service-section h2 {
