--- a/src/components/Promo/promo.css
+++ b/src/components/Promo/promo.css
@@ -7,6 +7,12 @@
     border-bottom: 1px solid black;
 }
 
+.container-promo .fa-percent {
+    font-size: 32px;
+    color: aqua;
+    margin-top: 100px;
+}
+
 .container-promo h2 {
     font-family: 'Ysabeau SC', sans-serif;
     color: aqua;
