--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -10,11 +10,16 @@
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5); 
     border-bottom:1px solid black;
 }
+
+.container-contact .fa-envelope {
+color: aqua;
+font-size: 32px;
+margin-top: 50px;
+}
 .title-contact {
     font-family: 'Ysabeau SC', sans-serif;
     color:aqua;
     font-size: 36px;
-    margin-top: 40px;
 }
 
 .subtitle-contact {
@@ -80,10 +85,6 @@
 }
 
 @media (max-width: 768px) {
-    .title-contact {
-        margin-top: 100px;
-    }
-
     .subtitle-contact {
         width:90%;
         font-family: 'Ysabeau SC', sans-serif;
