--- a/src/components/DetailsPack/detailspack.css
+++ b/src/components/DetailsPack/detailspack.css
@@ -6,6 +6,10 @@
     background-color: rgba(0, 255, 255, 0.996);
     margin-top: 10px;
     color:black;
+    border-radius:5px;
+    box-shadow: 0 3px 4px #343434, inset 0 -2px 5px #343434,
+    inset 0 4px 5px rgba(255, 255, 255, 0.245), 0 0 0 2px #343434, 0 0 0 5px #343434,
+    0 0 0 1.5px #343434;
 }
 
 .details-pack.open {
