--- a/src/components/Timeline/timeline.css
+++ b/src/components/Timeline/timeline.css
@@ -10,6 +10,7 @@
     font-family: 'Ysabeau SC', sans-serif;
     font-size: 28px;
 }
+
 .title-time {
     box-shadow: 10px 5px 10px rgba(0, 0, 0, 0.5);
     padding: 1rem 0rem 1rem 0rem;
@@ -151,6 +152,13 @@
     justify-content: center;
     font-size: 1.7rem;
     color: white;
+}
+
+
+#timeline .fa-timeline {
+    color:aqua;
+    font-size: 32px;
+    margin-top: 100px;
 }
 
 /* arrow */
