--- a/src/components/HeroHeader/heroHeader.css
+++ b/src/components/HeroHeader/heroHeader.css
@@ -135,6 +135,7 @@
     }
 
     .container-screens {
+        width:90%;
         margin-top: 30px;
     }
 
@@ -147,7 +148,7 @@
         font-size: 28px;
     }
     .asset-hero {
-        width:320px;
+        width:100%;
         height:auto;
         padding: 2%;
     }
