--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -10,7 +10,16 @@
     color: #ffffff;
     overflow: hidden;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5); 
+    opacity: 0;
+    transform: translateY(30px);
+    transition: opacity 0.8s ease-out, transform 0.8s ease-out;
 }
+
+.container-about.fadeInUp {
+    opacity: 1;
+    transform: translateY(0);
+}
+
 .content-about {
     margin: 0 auto;
     display: flex;
@@ -37,7 +46,6 @@
     font-family: 'Ysabeau SC', sans-serif;
     margin-bottom: 20px;
     color: #ffffff;
-    animation: fadeInDown 1s ease-in-out;
 }
 
 .subtitle-about {
@@ -45,9 +53,15 @@
     font-size: 36px;
     font-family: 'Ysabeau SC', sans-serif;
     margin-bottom: 10px;
-    /*color: #FF6F61; */
     color:aqua;
-    animation: fadeInDown 1.2s ease-in-out;
+    display: inline-block;
+    animation: wave 4s infinite;
+}
+
+@keyframes wave {
+    0% { transform: translateX(0px); }
+    50% { transform: translateX(-10px); }
+    100% { transform: translateX(0px); }
 }
 
 .box-about {
@@ -72,15 +86,24 @@
     margin: 0;
     border-left: 3px solid aqua;
     padding-left: 20px;
-    animation: fadeInUp 1.4s ease-in-out;
+    transform: translateX(-100%);
+    animation: slideIn 2s forwards;
 }
 
+@keyframes slideIn {
+    to {
+        transform: translateX(0);
+    }
+}
+    
 .list {
     width: 45%;
     padding: 2%;
     text-align: left;
     box-sizing: border-box;
     animation: fadeInUp 1.6s ease-in-out;
+    transform: translateX(+100%);
+    animation: slideIn 2s forwards;
 }
 
 .li {
@@ -96,7 +119,6 @@
 
 .li i {
     margin-right: 10px;
-    /*color: #FF6F61; */
     color:aqua;
     font-size: 22px;
 }
@@ -123,10 +145,15 @@
     background: rgba(255, 255, 255, 0.1);
     border-radius: 8px;
     padding: 20px;
+    transition: transform 0.3s ease;
     box-shadow: 0 3px 4px rgb(0, 0, 0, 1), inset 0 -2px 5px rgba(0, 0, 0, 1),
     inset 0 4px 15px rgba(255, 255, 255, 0.245), 0 0 0 2px #33333330, 0 0 0 5px #33333330,
     0 0 0 5.5px #33333330;
     padding:15px;
+}
+
+.one-specification:hover {
+    transform: translateY(-10px);
 }
 
 .specification {
@@ -149,8 +176,9 @@
 }
 
 @media (max-width: 768px) {
+
     .content-about {
-        padding-bottom: 110px;
+        padding-bottom: 20px;
     }
 
     .box-about {
@@ -194,16 +222,5 @@
     .txt-specification {
         font-size: 16px;
     }
-}
-
-/* Animations */
-@keyframes fadeInDown {
-    from { opacity: 0; transform: translateY(-20px); }
-    to { opacity: 1; transform: translateY(0); }
-}
-
-@keyframes fadeInUp {
-    from { opacity: 0; transform: translateY(20px); }
-    to { opacity: 1; transform: translateY(0); }
 }
 
