--- a/src/components/HeroHeader/heroHeader.css
+++ b/src/components/HeroHeader/heroHeader.css
@@ -54,8 +54,21 @@
     font-family: 'Ysabeau SC', sans-serif;
     color: #e0e0e0;
     margin-bottom: 15px;
-    animation: fadeIn 1.2s ease-in-out;
+    white-space: nowrap;
+    overflow: hidden;
+    display: inline-block;
+    animation: typing1 2s steps(20, end);
 }
+
+@keyframes typing1 {
+    from { 
+        width: 0; 
+    }
+    to { 
+        width: 100%; 
+    }
+}
+
 
 .title-hero {
     text-transform: uppercase;
@@ -66,15 +79,46 @@
     font-weight: 900;
     font-family: 'Cinzel';
     margin-bottom: 10px;
-    animation: fadeInUp 1.5s ease-in-out;
+    white-space: nowrap;
+    overflow: hidden;
+    display: inline-block;
+    opacity: 0;
+    animation: typing2 2s steps(20, end)2s forwards;
 }
+
+@keyframes typing2 {
+    from { 
+        width: 0; 
+        opacity:0;
+    }
+    to { 
+        width: 100%; 
+        opacity:1;
+    }
+}
+
 
 .subtitle-hero {
     font-size: 20px;
     line-height: 28px;
     color: #b0b0b0;
     font-family: 'Ysabeau SC', sans-serif;
-    animation: fadeInUp 2s ease-in-out;
+    white-space: nowrap;
+    overflow: hidden;
+    display: inline-block;
+    opacity: 0;
+    animation: typing3 2s steps(20, end)4s forwards;
+}
+
+@keyframes typing3 {
+    from { 
+        width: 0; 
+        opacity:0;
+    }
+    to { 
+        width: 100%; 
+        opacity:1;
+    }
 }
 
 .container-screens {
@@ -145,7 +189,7 @@
     
     .title-hero {
         text-align: center;
-        font-size: 28px;
+        font-size: 24px;
     }
     .asset-hero {
         width:100%;
