--- a/src/components/Timeline/timeline.css
+++ b/src/components/Timeline/timeline.css
@@ -9,6 +9,13 @@
     color:aqua;
     font-family: 'Ysabeau SC', sans-serif;
     font-size: 28px;
+    animation: wave 4s infinite;
+}
+
+@keyframes wave {
+    0% { transform: translateX(0px); }
+    50% { transform: translateX(-10px); }
+    100% { transform: translateX(0px); }
 }
 
 .title-time {
@@ -158,7 +165,7 @@
 #timeline .fa-timeline {
     color:aqua;
     font-size: 32px;
-    margin-top: 100px;
+    margin-top: 60px;
 }
 
 /* arrow */
