--- a/src/components/Promo/promo.css
+++ b/src/components/Promo/promo.css
@@ -117,4 +117,9 @@
         width: 80%;
         margin-bottom: 20px;
     }
+    .container-promo p {
+        width:90%;
+        margin-left:auto;
+        margin-right:auto;
+    }
 }
